# midubot-rs

./: .env.example  Cargo.toml
src/: main.rs
src/config/: general_command_loader.rs  mod.rs  setup.rs  slash_command_loader.rs
src/general_commands/: ping.rs
src/slash_commands/: mod.rs
